fix some spacing issues

--- a/cms/static/cms/sass/modules/_subnav.scss
+++ b/cms/static/cms/sass/modules/_subnav.scss
@@ -6,7 +6,7 @@
 #cms_toolbar {
 //######################################################################################################################
 // #SUBNAV#
-.cms_submenu { display:block; float:right; width:20px; height:20px; cursor:pointer; position:relative;
+.cms_submenu { display:block; float:right; width:20px; height:15px; cursor:pointer; position:relative;
 	background:url('../img/toolbar/sprite_toolbar.png') no-repeat 3px -152px; }
 
 .cms_submenu-lang { float:right; padding:0 5px;position:relative; top:-1px; right:-1px;
